--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "[typescript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
   "css.validate": false,
-  "editor.codeActionsOnSave": ["source.addMissingImports", "source.organizeImports", "source.fixAll.eslint"],
+  "editor.codeActionsOnSave": ["source.addMissingImports", "source.fixAll.eslint"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
