--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "serve": "run-s build start",
+    "deploy:rules": "firebase deploy --only firestore:rules",
+    "deploy:storageRules": "firebase deploy --only storage:rules",
+    "deploy:index": "firebase deploy --only firestore:indexes",
+    "start:emulators": "firebase emulators:start --import=./firebase_emulators_data --export-on-exit=./firebase_emulators_data",
     "lint": "next lint",
     "prettier": "prettier --check .",
     "fix": "run-s -l -c fix:lint fix:prettier",
@@ -25,7 +28,7 @@
     "@types/node": "16.0.0",
     "@types/react": "17.0.41",
     "@typescript-eslint/eslint-plugin": "5.15.0",
-    "autoprefix": "1.0.1",
+    "autoprefixer": "10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "8.5.0",
