--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "recoil": "0.7.0",
-    "swr": "1.2.2"
+    "swr": "1.2.2",
+    "zod": "3.14.4"
   },
   "devDependencies": {
     "@types/node": "16.0.0",
